# change_log_checker

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: change_log_checker.hpp
src/: CMakeLists.txt  change_log_checker_lib.cpp  main.cpp
tests/: CMakeLists.txt  test_change_log_checker.cpp
